update first slide

--- a/Rust/index.html
+++ b/Rust/index.html
@@ -57,10 +57,8 @@
 <section>
 	<h1>Rust</h1>
 	<h3>The memory safe and efficient language of the future</h3>
-	<p>
-		<small>Artyom Pavlov, 2020.</small>
-		<small>Based on <a href="https://github.com/Manishearth/Presentations">github.com/Manishearth/Presentations</a></small>
-	</p>
+	<p><small>Artyom Pavlov, 2020.</small></p>
+	<p><small>Based on <a href="https://github.com/Manishearth/Presentations">github.com/Manishearth/Presentations</a></small></p>
 </section>
 <section>
 	<section>
