add null pointer

--- a/Rust/index.html
+++ b/Rust/index.html
@@ -67,7 +67,7 @@
 		<li>Dangling pointers</li>
 		<li>Iterator invalidation</li>
 		<li>Thread safety</li>
-
+		<li>Null Pointer References: The Billion Dollar Mistake</li>
 	</ul>
 	</section>
 	<section>
